[project]
name = "comfydock-env-depthflow-inpainting-with-VACE"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.8",
    "alembic",
    "av>=14.2.0",
    "comfyui-embedded-docs==0.3.0",
    "comfyui-frontend-package==1.28.7",
    "comfyui-workflow-templates==0.2.1",
    "einops",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "pillow",
    "psutil",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pyyaml",
    "safetensors>=0.4.2",
    "scipy",
    "sentencepiece",
    "spandrel",
    "sqlalchemy",
    "tokenizers>=0.13.3",
    "torch",
    "torchaudio",
    "torchsde",
    "torchvision",
    "tqdm",
    "transformers>=4.37.2",
    "yarl>=1.18.0",
]

[tool.comfydock]
comfyui_version = "v0.3.66"
python_version = "3.12"

[tool.comfydock.nodes.comfyui-basic-math]
name = "ComfyUI-Basic-Math"
registry_id = "comfyui-basic-math"
repository = "https://github.com/akatz-ai/comfyui-basic-math"
version = "0.0.6"
download_url = "https://cdn.comfy.org/akatz/comfyui-basic-math/0.0.6/node.zip"
source = "registry"

[tool.comfydock.nodes.comfyui-depthflow-nodes]
name = "ComfyUI-Depthflow-Nodes"
registry_id = "comfyui-depthflow-nodes"
repository = "https://github.com/akatz-ai/comfyui-depthflow-nodes"
version = "1.2.2"
download_url = "https://cdn.comfy.org/akatz/comfyui-depthflow-nodes/1.2.2/node.zip"
source = "registry"

[tool.comfydock.nodes.comfyui-depthanythingv2]
name = "ComfyUI-DepthAnythingV2"
registry_id = "comfyui-depthanythingv2"
repository = "https://github.com/kijai/comfyui-depthanythingv2"
version = "1.0.1"
download_url = "https://cdn.comfy.org/kijai/comfyui-depthanythingv2/1.0.1/node.tar.gz"
source = "registry"

[tool.comfydock.nodes.rgthree-comfy]
name = "rgthree-comfy"
registry_id = "rgthree-comfy"
repository = "https://github.com/rgthree/rgthree-comfy"
version = "1.0.2509092031"
download_url = "https://cdn.comfy.org/rgthree/rgthree-comfy/1.0.2509092031/node.zip"
source = "registry"

[tool.comfydock.nodes.comfyui-videohelpersuite]
name = "ComfyUI-VideoHelperSuite"
registry_id = "comfyui-videohelpersuite"
repository = "https://github.com/kosinkadink/comfyui-videohelpersuite"
version = "1.7.7"
download_url = "https://cdn.comfy.org/kosinkadink/comfyui-videohelpersuite/1.7.7/node.zip"
source = "registry"

[tool.comfydock.nodes.ComfyUI-WanVideoWrapper]
name = "ComfyUI-WanVideoWrapper"
registry_id = "ComfyUI-WanVideoWrapper"
repository = "https://github.com/kijai/comfyui-wanvideowrapper"
version = "1.3.4"
download_url = "https://cdn.comfy.org/kijai/ComfyUI-WanVideoWrapper/1.3.4/node.zip"
source = "registry"

[tool.comfydock.workflows.DepthflowInpaintWithVACE_v1]
nodes = ["ComfyUI-WanVideoWrapper", "comfyui-basic-math", "comfyui-depthanythingv2", "comfyui-depthflow-nodes", "comfyui-videohelpersuite", "rgthree-comfy"]
path = "workflows/DepthflowInpaintWithVACE_v1.json"

[[tool.comfydock.workflows.DepthflowInpaintWithVACE_v1.models]]
filename = "depth_anything_v2_vitl_fp32.safetensors"
category = "unknown"
criticality = "optional"
status = "resolved"
nodes = [{node_id = "43", node_type = "DownloadAndLoadDepthAnythingV2Model", widget_idx = 0, widget_value = "depth_anything_v2_vitl_fp32.safetensors"}]
hash = "54d0b2c7072d6582"

[[tool.comfydock.workflows.DepthflowInpaintWithVACE_v1.models]]
filename = "wan_2.1_vae.safetensors"
category = "vae"
criticality = "required"
status = "resolved"
nodes = [{node_id = "27", node_type = "VAELoader", widget_idx = 0, widget_value = "wan_2.1_vae.safetensors"}]
hash = "37b9621f028a9f5a"

[[tool.comfydock.workflows.DepthflowInpaintWithVACE_v1.models]]
filename = "wan2.1_vace_1.3B_fp16.safetensors"
category = "diffusion_models"
criticality = "flexible"
status = "resolved"
nodes = [{node_id = "23", node_type = "UNETLoader", widget_idx = 0, widget_value = "WanVideo/wan2.1_vace_1.3B_fp16.safetensors"}]
hash = "09bca1a92db2b9b6"

[[tool.comfydock.workflows.DepthflowInpaintWithVACE_v1.models]]
filename = "umt5_xxl_fp16.safetensors"
category = "clip"
criticality = "required"
status = "resolved"
nodes = [{node_id = "26", node_type = "CLIPLoader", widget_idx = 0, widget_value = "umt5_xxl_fp16.safetensors"}]
hash = "05c15b2f1f9a5f21"

[[tool.comfydock.workflows.DepthflowInpaintWithVACE_v1.models]]
filename = "Wan21_CausVid_bidirect2_T2V_1_3B_lora_rank32.safetensors"
category = "loras"
criticality = "required"
status = "resolved"
nodes = [{node_id = "18", node_type = "LoraLoader", widget_idx = 0, widget_value = "WAN/Wan21_CausVid_bidirect2_T2V_1_3B_lora_rank32.safetensors"}]
hash = "2e0b4fdfd6fbdce4"

[tool.comfydock.workflows.DepthflowInpaintWithVACE_v1.custom_node_map]
"Mute / Bypass Repeater (rgthree)" = "rgthree-comfy"
"Fast Bypasser (rgthree)" = "rgthree-comfy"

[tool.comfydock.models]
54d0b2c7072d6582 = {filename = "depth_anything_v2_vitl_fp32.safetensors", size = 1341306404, relative_path = "depthanything/depth_anything_v2_vitl_fp32.safetensors", category = "unknown"}
37b9621f028a9f5a = {filename = "wan_2.1_vae.safetensors", size = 253815318, relative_path = "vae/wan_2.1_vae.safetensors", category = "vae"}
09bca1a92db2b9b6 = {filename = "wan2.1_vace_1.3B_fp16.safetensors", size = 4309519800, relative_path = "diffusion_models/WanVideo/wan2.1_vace_1.3B_fp16.safetensors", category = "diffusion_models"}
05c15b2f1f9a5f21 = {filename = "umt5_xxl_fp16.safetensors", size = 11366399385, relative_path = "clip/umt5_xxl_fp16.safetensors", category = "clip"}
2e0b4fdfd6fbdce4 = {filename = "Wan21_CausVid_bidirect2_T2V_1_3B_lora_rank32.safetensors", size = 91233416, relative_path = "loras/WAN/Wan21_CausVid_bidirect2_T2V_1_3B_lora_rank32.safetensors", category = "loras"}

[tool.uv]
constraint-dependencies = ["torch==2.9.0+cu129", "torchvision==0.24.0+cu129", "torchaudio==2.9.0+cu129"]
[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources.torch]
index = "pytorch-cu129"

[tool.uv.sources.torchvision]
index = "pytorch-cu129"

[tool.uv.sources.torchaudio]
index = "pytorch-cu129"

[dependency-groups]
comfyui-depthanythingv2-16ef6428 = [
    "accelerate",
    "huggingface-hub",
]
comfyui-depthflow-nodes-31111da7 = [
    "depthflow==0.9.1",
    "numpy",
    "opencv-python",
    "pydantic",
]
comfyui-videohelpersuite-ffcc3e88 = [
    "imageio-ffmpeg",
    "opencv-python",
]
comfyui-wanvideowrapper-4327e958 = [
    "accelerate>=1.2.1",
    "diffusers>=0.33.0",
    "einops",
    "ftfy",
    "gguf>=0.17.1",
    "opencv-python",
    "peft>=0.17.0",
    "protobuf",
    "pyloudnorm",
    "scipy",
    "sentencepiece>=0.2.0",
]
